===============
Stalker Changes
===============

0.2.0.b8
========

* **SOM:**

  * **Update:** Renamed **Version.version_of** attribute to **Version.task**.
  * **Fix:** Fixed **Version.version_number** where it was not possible to have
    a version number bigger than 2.

0.2.0.b7
========

* **SOM:**

  * **Update:** **Task.schedule_constraint** is now reflected to the tjp file
    correctly.
  * **Fix:** **check_circular_dependency()** now checks if the **entity** and
    the **other_entity** are the same.
  * **Fix:** **Task.to_tjp()** now correctly add the dependent tasks of a
    container task.
  * **Fix:** **Task.__eq__()** now correctly considers the parent, depends,
    resources, start and end dates.
  * **Update:** **Task.priority** is now reflected in tjp file if it is
    different than the default value (500).
  * **New::** Added a new class called **Vacation** to hold user vacations.
  * **Update:** Removed dependencies to ``pyramid.security.Allow`` and
    ``pyramid.security.Deny`` in couple of packages.
  * **Update:** Changed the way the ``stalker.defaults`` is created.
  * **Fix:** **EnvironmentBase.get_version_from_full_path()**,
    **EnvironmentBase.get_versions_from_path()**,
    **EnvironmentBase.trim_repo_path()**, **EnvironmentBase.find_repo** methods
    are now working properly.
  * **Update:** Added **Version.absolute_full_path** property which renders the
    absolute full path which also includes the repository path.
  * **Update:** Added **Version.absolute_path** property which renders the
    absolute path which also includes the repository path.

* **WebUI:**

  * **Fix:** GanttChart  view of Assets, Shots,Sequences or Tasks now displays
    only the children and parents of that Task derivative.
  * **Update:** Task create/update dialog now displays the full hierarchy in
    parent/dependent task listings.
  * **Fix:** TimeLog create/update dialog now displays the default times
    correctly when creating a new TimeLog.