@@ -10,6 +10,8 @@ Stalker Changes
   * **Update:** Renamed **Version.version_of** attribute to **Version.task**.
   * **Fix:** Fixed **Version.version_number** where it was not possible to have
     a version number bigger than 2.
+  * **Fix:** In **db.setup()** Ticket statuses are only created if there aren't
+    any.
 
 0.2.0.b7
 ========
